--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.postprocessing": "3.2.2",
     "com.unity.render-pipelines.universal": "14.0.7",
     "jp.keijiro.klak.ndi": "2.1.0",
     "com.unity.modules.ai": "1.0.0",
