--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.postprocessing": "3.2.2",
     "com.unity.render-pipelines.universal": "14.0.7",
+    "com.unity.timeline": "1.7.6",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
     "jp.keijiro.klak.ndi": "2.1.0",
     "com.unity.modules.ai": "1.0.0",
