Modification package NDI web à Local

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,7 +4,6 @@
     "com.unity.render-pipelines.universal": "14.0.7",
     "com.unity.timeline": "1.7.6",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
-    "jp.keijiro.klak.ndi": "2.1.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -37,13 +36,5 @@
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
   },
-  "scopedRegistries": [
-    {
-      "name": "Keijiro",
-      "url": "https://registry.npmjs.com",
-      "scopes": [
-        "jp.keijiro"
-      ]
-    }
-  ]
+  "scopedRegistries": []
 }
